# wineerp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_users.py  0002_wine.py  0003_receiving.py  0004_receiving_idempotency.py  0005_receiving_source.py  0006_receiving_amendments.py  0007_amendment_memo.py  0008_stored_images.py  0009_wine_archived.py  0010_audit_logs.py
backend/app/: main.py
backend/app/adapters/: __init__.py  label_inference.py  label_inference_fake.py  storage.py  storage_db.py  storage_local.py  storage_r2.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  imaging.py  security.py  timeframe.py
backend/app/crud/: __init__.py  audit.py  receiving.py  report.py  user.py  wine.py
backend/app/models/: __init__.py  amendment.py  audit.py  image.py  receiving.py  user.py  wine.py
backend/app/schemas/: __init__.py  audit.py  inference.py  receiving.py  report.py  scan.py  user.py  wine.py
backend/app/seed/: wines.py
backend/app/services/: __init__.py  excel.py  ports.py
backend/app/tests/: test_audit.py  test_auth.py  test_auth_manager.py  test_config_guards.py  test_health.py  test_images.py  test_inference.py  test_inventory.py  test_receiving.py  test_receiving_amend.py  test_receiving_history.py  test_reports.py  test_runtime_dependencies.py  (+5 more)
backend/scripts/: create_manager.py  gen_openapi.py  seed_wines.py
(+168 files in other folders)
